--- a/projects/web/src/app/features/blogs/blog-detail/blog-detail.component.html
+++ b/projects/web/src/app/features/blogs/blog-detail/blog-detail.component.html
@@ -17,6 +17,6 @@
 
     <mat-divider/>
 
-    <article [innerHTML]="data.blog?.content"></article>
+    <article class="blog-content" [innerHTML]="data.blog?.content"></article>
   </div>
 }
