Complete your blogs page

--- a/projects/common/src/lib/shared/layouts/app-layout/header/user-options/user-options.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/user-options/user-options.component.html
@@ -5,11 +5,11 @@
     <span class="profile-email">{{ currentUser()?.email }}</span>
   </div>
   <mat-divider />
-  <button [routerLink]="profileUrl()" class="menu-item" type="button" mat-menu-item>
+  <button class="menu-item" type="button" mat-menu-item>
     <mat-icon>person</mat-icon>
     <span>Your profile</span>
   </button>
-  <button class="menu-item" type="button" mat-menu-item>
+  <button [routerLink]="yourBlogsUrl()" class="menu-item" type="button" mat-menu-item>
     <mat-icon>article</mat-icon>
     <span>Your blogs</span>
   </button>
