--- a/projects/web/src/app/features/blogs/user-blogs/user-blogs.component.html
+++ b/projects/web/src/app/features/blogs/user-blogs/user-blogs.component.html
@@ -1,1 +1,12 @@
-<div>User Blog</div>
+@if ({ blogPage: blogsPage$ | async }; as data) {
+  <section class="container-sm wrapper">
+    <div class="blogs">
+      @for (blog of data.blogPage?.items; track blog.id) {
+        <knc-blog-preview [blog]="blog" />
+      }
+    </div>
+    @if (data.blogPage?.hasNext) {
+      <button class="load-more-button" type="button" mat-raised-button color="primary">Load more</button>
+    }
+  </section>
+}
