Style user preview and navigate to profile url

--- a/projects/common/src/lib/shared/components/user-preview/user-preview.component.html
+++ b/projects/common/src/lib/shared/components/user-preview/user-preview.component.html
@@ -1,4 +1,4 @@
-<div class="user-info">
+<div class="user-info" [routerLink]="userBlogsUrl()" (click)="onUserInfoClick($event)">
   <knc-avatar size="super-small" [user]="user()" />
-  <p>{{ user().fullName }}</p>
+  <p class="full-name">{{ user().fullName }}</p>
 </div>
