--- a/projects/common/src/lib/shared/components/user-preview/user-preview.component.scss
+++ b/projects/common/src/lib/shared/components/user-preview/user-preview.component.scss
@@ -2,4 +2,9 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  cursor: pointer;
+}
+
+.user-info:hover {
+  text-decoration: underline;
 }
