Add user profile page

--- a/projects/common/src/lib/shared/layouts/app-layout/header/user-options/user-options.component.html
+++ b/projects/common/src/lib/shared/layouts/app-layout/header/user-options/user-options.component.html
@@ -5,7 +5,7 @@
     <span class="profile-email">{{ currentUser()?.email }}</span>
   </div>
   <mat-divider />
-  <button [routerLink]="yourBlogsUrl()"  class="menu-item" type="button" mat-menu-item>
+  <button [routerLink]="profileUrl()"  class="menu-item" type="button" mat-menu-item>
     <mat-icon>person</mat-icon>
     <span>Your profile</span>
   </button>
