Integrate update user API

--- a/projects/common/src/lib/shared/components/user-preview/user-preview.component.scss
+++ b/projects/common/src/lib/shared/components/user-preview/user-preview.component.scss
@@ -1,10 +1,11 @@
 .user-info {
   display: flex;
   align-items: center;
+  width: fit-content;
   gap: 8px;
   cursor: pointer;
 }
 
-.user-info:hover {
+.full-name:hover {
   text-decoration: underline;
 }
