--- a/projects/web/src/app/features/users/user-detail/user-detail.component.html
+++ b/projects/web/src/app/features/users/user-detail/user-detail.component.html
@@ -13,6 +13,6 @@
       <knc-input placeholder="Last Name" formControlName="lastName" name="last-name"></knc-input>
     </knc-label>
 
-    <button class="submit-button" type="submit" mat-raised-button color="primary">Update</button>
+    <button [kncLoading]="isUpdatingUser()" class="submit-button" type="submit" mat-raised-button color="primary">Update</button>
   }
 </form>
