Complete avatar upload component

--- a/projects/common/src/lib/shared/components/avatar/avatar.component.html
+++ b/projects/common/src/lib/shared/components/avatar/avatar.component.html
@@ -5,8 +5,8 @@
   [class.super-small]="size() === 'super-small'"
   class="wrapper"
 >
-  @if (user()?.pictureUrl) {
-    <img class="picture" [alt]="user()?.fullName" [src]="user()?.pictureUrl" />
+  @if (user()?.pictureUrl || previewImageUrl()) {
+    <img class="picture" [alt]="user()?.fullName" [src]="previewImageUrl() ?? user()?.pictureUrl" />
   } @else {
     <span class="name-picture" [style.background-color]="randomColor">{{ firstLetterOfName }}</span>
   }
