--- a/projects/web/src/app/features/users/user-detail/user-detail.component.html
+++ b/projects/web/src/app/features/users/user-detail/user-detail.component.html
@@ -1,9 +1,12 @@
 <form [formGroup]="userForm" (submit)="onSubmit()" class="container-sm wrapper">
   @if (userDetail(); as user) {
-    <knc-avatar size="large" [user]="user" />
-
-    <p class="email"><b>Email: </b>{{ user.email }}</p>
-    <p class="email"><b>Full Name: </b>{{ user.fullName }}</p>
+    <div class="base-info">
+      <knc-avatar-uploader formControlName="pictureUrl" size="large" [user]="user" />
+      <div class="info">
+        <p class="email"><b>Full Name: </b>{{ user.fullName }}</p>
+        <p class="email"><b>Email: </b>{{ user.email }}</p>
+      </div>
+    </div>
 
     <knc-label label="First Name" [isRequired]="true">
       <knc-input placeholder="First Name" formControlName="firstName" name="first-name"></knc-input>
