--- a/projects/web/src/app/features/users/user-detail/user-detail.component.scss
+++ b/projects/web/src/app/features/users/user-detail/user-detail.component.scss
@@ -4,7 +4,21 @@
   padding: $container-padding;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 24px;
+}
+
+.base-info {
+  display: flex;
+  gap: 24px;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  flex: 1;
 }
 
 .email {
