Complete search feature

--- a/projects/common/src/lib/shared/components/inputs/input/input.component.html
+++ b/projects/common/src/lib/shared/components/inputs/input/input.component.html
@@ -2,6 +2,8 @@
   <mat-form-field class="form-field">
     <input
       matInput
+      (focus)="onFocus()"
+      (blur)="onBlur()"
       [type]="type()"
       [name]="name()"
       [formControl]="formControl"
