--- a/projects/common/src/lib/shared/theme/custom-theme.scss
+++ b/projects/common/src/lib/shared/theme/custom-theme.scss
@@ -162,6 +162,8 @@ $app-theme-orange: mat.define-light-theme(
 
   --text-primary-dark-color: #000000;
   --text-primary-light-color: #ffffff;
+
+  --background-color: #ffffff;
 }
 
 /* Blue Theme */
