--- a/projects/common/src/lib/shared/theme/variables.scss
+++ b/projects/common/src/lib/shared/theme/variables.scss
@@ -12,6 +12,8 @@ $font-size-56: 3.5rem;
 $overlay-color: rgba(0, 0, 0, 1);
 $border-color: rgba(128, 128, 128, 0.265);
 
+$box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
+
 $app-max-width: 1600px;
 
 $border-radius: 4px;
