--- a/projects/common/src/lib/shared/theme/reset.scss
+++ b/projects/common/src/lib/shared/theme/reset.scss
@@ -1,3 +1,7 @@
+html * {
+  box-sizing: border-box;
+}
+
 p,
 h1,
 h2,
@@ -11,4 +15,13 @@ h6 {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  padding: 0;
+  background: none;
+  outline: transparent;
+  border: none;
+  text-align: left;
+  font-size: inherit;
 }
