--- a/projects/web/src/app/features/blogs/blog-detail/blog-detail.component.html
+++ b/projects/web/src/app/features/blogs/blog-detail/blog-detail.component.html
@@ -1,4 +1,10 @@
-@if ({ blog: blogDetail$ | async, blogId: blogId$ | async }; as data) {
+@if (
+  {
+    blog: blogDetail$ | async,
+    isUserLikeBlog: isUserLikeBlog$ | async,
+  };
+  as data
+) {
   <div class="container-sm wrapper">
     <h1>{{ data.blog?.title }}</h1>
     <p>{{ data.blog?.summary }}</p>
@@ -16,9 +22,9 @@
 
     <mat-divider />
 
-    @if (data.blogId) {
+    @if (data.blog && isPlatformBrowser) {
       <div>
-        <knw-blog-detail-emoticon [blogId]="data.blogId" />
+        <knc-emoticon-button [isBlogBeenLiked]="data.isUserLikeBlog ?? false" [blog]="data.blog" />
       </div>
     }
 
