Integrate get blog with emoticons

--- a/projects/web/src/app/features/blogs/blog-detail/blog-detail.component.html
+++ b/projects/web/src/app/features/blogs/blog-detail/blog-detail.component.html
@@ -24,7 +24,7 @@
 
     @if (data.blog && isPlatformBrowser) {
       <div>
-        <knc-emoticon-button [isBlogBeenLiked]="data.isUserLikeBlog ?? false" [blog]="data.blog" />
+        <knc-emoticon-button [isUserLikeBlogInitial]="data.isUserLikeBlog ?? false" [blog]="data.blog" />
       </div>
     }
 
