--- a/projects/common/src/lib/shared/components/avatar-uploader/avatar-uploader.component.html
+++ b/projects/common/src/lib/shared/components/avatar-uploader/avatar-uploader.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper" (click)="onClick()" title="Click to edit your avatar">
   <knc-avatar size="large" [previewImageUrl]="imageUrl()" [user]="user()"/>
-  <button class="button" color="secondary" type="button" mat-mini-fab>
+  <button [disabled]="disabled" class="button" color="secondary" type="button" mat-mini-fab>
     <mat-icon>camera_alt</mat-icon>
   </button>
 </div>
