--- a/projects/web/src/app/features/user-views/user-views.component.html
+++ b/projects/web/src/app/features/user-views/user-views.component.html
@@ -33,7 +33,9 @@
       </div>
 
       <div class="slogan">
-        <p>Write your dream with <b>KNBLOG</b></p>
+        <p>
+          Write your dream with <b class="app-name">{{ appName.toUpperCase() }}</b>
+        </p>
         <p class="sub-slogan">This is a self-edu project. No commercial purpose.</p>
       </div>
     </section>
