--- a/projects/common/src/lib/shared/components/alert/alert.component.html
+++ b/projects/common/src/lib/shared/components/alert/alert.component.html
@@ -20,9 +20,5 @@
     }
   }
   <p>{{ text() }}</p>
-  @if (isCalledFromSnackbar()) {
-    <button (click)="onDismissAlert()" class="close-button" type="button" mat-icon-button>
-      <mat-icon>close</mat-icon>
-    </button>
-  }
+  <ng-content></ng-content>
 </div>
